--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "scripts": {
     "build": "tsc -p .",
-    "start": "node dist/index.js",
-    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/index.ts"
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/server.ts"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.13",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
+    "sequelize": "^6.33.0",
     "ts-node": "^10.9.1",
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^20.5.9",
     "concurrently": "^8.2.1",
     "typescript": "^5.2.2"
